# AlphaBlokus

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  build.rs  pyproject.toml
.cargo/: config.toml
.codex/: config.toml
.codex/rules/: default.rules
.github/workflows/: ci.yml  docker-publish.yml
alpha_blokus/: __main__.py  agents.py  benchmark_nn.py  gameplay_actor.py  generate_moves.py  mcts.py  moves_data.py  neural_net.py  neural_net_tg.py  optimizer.py  server.py  simulation.py  torch_net.py
alpha_blokus/entrypoints/: selfplay_loop.py
alpha_blokus/inference/: actor.py  client.py
alpha_blokus/model_stores/: base.py  local_directory_model_store.py  local_file_model_store.py
alpha_blokus/preprocessing/: generate_move_data.py
alpha_blokus/training/: helpers.py  load_games.py
alpha_blokus/utils/: event_logger.py  moves_data.py
analysis/: neural_net.ipynb  training_unlooped.ipynb
analysis/process_logs/: analysis.py
benchmarks/: test_cuda_approaches.py  test_pytorch_host_time.py  test_trt.py  test_trt_0.py  test_trt_1.py  test_trt_1p2.py  test_trt_1p5.py  test_trt_2.py  timer.py
conf/: arena_mcts_v_mcts.yaml  arena_v_pentobi.yaml  benchmark.yaml  main_self_play.yaml  unlooped_training.yaml
conf/game/: full_board.yaml
conf/networks/: main.yaml  wide.yaml
conf/training/: main.yaml
conf/versions/: debug.yaml  vast.yaml
configs/: base.yaml
configs/benchmark_inference/: full_tensorrt.toml  half_tensorrt.toml  ort.toml  ort_coreml.toml  ort_cpu.toml  tensorrt.toml
configs/enrich_piece_availability/: full.toml
configs/game/: half_board.yaml
configs/gameplay/: arena_mcts_v_mcts.yaml  arena_mcts_v_pentobi.yaml  base.yaml  generate_mcts_game_data.yaml
configs/generate_move_data/: full.toml  half.toml  tiny.toml
configs/generate_move_profiles/: full.toml  half.toml
configs/mcts_analyzer/: analyzer.toml
configs/networks/: main.yaml  wide.yaml
configs/scrap/: temp.config
configs/self_play/: full_mcts.toml  full_mcts_benchmark.toml  full_mcts_vast.toml  full_quad_arena.toml  full_quad_arena_one_mcts.toml  full_tensorrt_benchmark.toml  half_mcts.toml  half_mcts_vast.toml  half_quad_arena.toml  half_tensorrt_benchmark.toml  latest_v_pentobi.toml  one_model_games.toml  tiny.toml  tiny_random.toml  v_pentobi.toml
configs/train_live/: local_film.toml  local_vast.toml  local_vast_warmup.toml  sample.toml  vast_film.toml  vast_vast.toml
configs/train_offline/: 19m_from_10m_windowed.toml  build_larger.toml  complex_value_head.toml  last_window_local.toml  last_window_vast.toml  rebuild_to_22m.toml  simulate.toml  simulate_10block_64chan.toml  simulate_10block_96chan.toml  simulate_16block_64chan.toml  try_mimic_live.toml  try_mimic_live_from_1770597814.toml  try_mimic_live_from_1770619350.toml  with_film.toml  with_film_larger.toml  with_film_q.toml
configs/training/: full.toml  full_vast.toml  full_vast_cuda.toml  full_vast_mps.toml  full_vast_simulated.toml  full_vast_simulated_base.toml  half.toml  half_vast.toml  (+11 more)
deploy/: config.alloy  select_vast_instance.py  setup.sh  vast_setup.sh
frontend/: README.md  vite.config.ts
legacy_alpha_blokus/: __main__.py  display.py
legacy_test/: test_gameplay_actor.py
misc/: reset_scrap  rust-review
notebooks/: examine_gradients.ipynb  temp.ipynb  training2.ipynb
python/: README.md  configs.py  files.py  game_config.py  onnx_helper.py  pyproject.toml  requirements.txt  res_net.py  save_onnx.py  scrap.ipynb  train.py  train_standalone.py  train_utils.py  trivial_net.py
python/analysis/: mcts_search.ipynb  network_prediction_loss.ipynb  read_mcts_trace.py
python/misc/: s3_test.py
python/notebooks/: compute_test_loss.ipynb  mcts_search.ipynb  network_prediction_loss.ipynb  recompute_batch_norm.ipynb  republish_model.ipynb  s3.ipynb  scrap.ipynb  vast.ipynb
python/scripts/: analyze_move_temperature_randomness.py  compute_quad_arena_elo.py  generate_quad_arena_batch.py  generate_res_net_film_test_fixture.py  list_files_after_sample_threshold.py  mcp_server.py  regurgitate_model.py  run_quad_arena_batch.py  save_onnx.py  train.py  train_live.py  train_offline.py  train_standalone.py
python/src/alphablokus/: configs.py  data_loaders.py  files.py  game_data.py  log.py  res_net.py  res_net_bottleneck.py  res_net_complex_value_head.py  res_net_conv_value.py  res_net_conv_value_position.py  res_net_double_bottleneck.py  res_net_film.py  res_net_global_pool.py  res_net_old_value_head.py  res_net_preact.py  res_net_se.py  save_onnx.py  train_utils.py  trivial_net.py
python/src/alphablokus/analysis/: mcts_analysis.py  move_temperature_randomness.py
python/src/alphablokus/mcp/: __init__.py  server.py
src/: config.rs  game.rs  lib.rs  main.rs  move_profile.rs  testing.rs
test/: conftest.py  test_mcts.py
tests/: s3_reload_integration.rs  test_config.py  test_hello_world.py  test_main.py  test_selfplay_loop.py  test_torch_inference_actor.py  test_torch_net.py
(+620 files in other folders)
