[package]
name = "alpha_blokus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bincode = { version = "2.0.1", features = ["serde"] }
bit-set = { version = "0.8.0", features = ["serde"] }
clap = { version = "4.5.46", features = ["derive"] }
indicatif = { version = "0.18.0", features = ["rayon"] }
itertools = "0.14.0"
once_cell = "1.21.3"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
zstd = "0.13.3"
