[package]
name = "alpha_blokus"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { version = "0.8.12", features = ["serde"] }
anyhow = "1.0.99"
async-trait = "0.1.89"
aws-config = { version = "1.8.6", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.106.0", features = ["behavior-version-latest"] }
axum = { version = "0.8.6", features = ["macros"] }
bit-set = { version = "0.8.0", features = ["serde"] }
chrono = "0.4.42"
chrono-tz = "0.10.4"
clap = { version = "4.5.46", features = ["derive"] }
cxx = "1.0.186"
dotenvy = "0.15.7"
indicatif = { version = "0.18.0", features = ["rayon"] }
itertools = "0.14.0"
log = { version = "0.4.28", features = ["release_max_level_warn"] }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
ndarray = "0.16.1"
once_cell = "1.21.3"
ort = "2.0.0-rc.10"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
toml = "0.9.5"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"
zstd = "0.13.3"

[build-dependencies]
cxx-build = "1.0.186"
