[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphablokus"
version = "0.1.0"
description = "Alpha Blokus Python utilities"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "onnxscript",
    "zstandard",
    "msgpack",
    "boto3",
    "python-dotenv",
    "tqdm",
    "aim",
    "numpy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
